--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
             <div class="feedback__timer">
                 <p id="timer"></p>
+                <p id="message"></p>
             </div>
             <div class="feedback__incorrectIndicators">
                 <p id="incorrects">0</p>
